--- a/style.css
+++ b/style.css
@@ -51,9 +51,12 @@ header .logo-wrapper img{
     color: #FFD700;
 }
 .video-wrapper {
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .bg-video {
