--- a/style.css
+++ b/style.css
@@ -51,7 +51,9 @@ header .logo-wrapper img{
     color: #FFD700;
 }
 .video-wrapper {
-  position: absolute;
+  position: fixed;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
